edited by kirti

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,9 +113,9 @@
     <string name="MakingResCheck1">Add Name to Waitlist to be notified if a table become avilable</string>
     <string name="MakingResCheck2">Have DINE HAwaii propose alternative restaurants of a similar food type and location as your request</string>
     <string name="MakingResCheck3">On the requested date,you may be able to obtain a table by adding your name to the Walk-in</string>
-    <string name="Feedback_96">During your visit with us,if you have any concerns with the Service,please send immediate feedback that will be addresses by the Management o Duty. 5:40p.m.</string>
+    <string name="Feedback_96">During your visit with us, if you have any concerns with the Service, please send immediate feedback that will be addressed by the Management on Duty.</string>
     <string name="Feedback_96IHave">I have the following Customer Service concerns:</string>
-    <string name="Reviews_97">Please help us imporve our Service to You and other Valued Customers. Please respond with your honest review of our Service: </string>
+    <string name="Reviews_97">Please help us in improving our Service to You and other Valued Customers. Please respond with your honest review of our Service. </string>
 
     <string name="thanku">Our chefs will begin and it will be completed in approx </string>
     <string name="thanku2"> delivery order will be take some additional time.If at any time,you have concerns with your order,please send us immediate feedback below.</string>
