--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,13 @@
     <string name="title_activity_add_new_coupon">AddNewCouponActivity</string>
     <string name="msg_no_internet">No internet connection</string>
     <string name="title_activity_bid_list">Bid History</string>
+    <string name="title_activity_manage_business">ManageBusinessActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
