--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="disclaimer_text">(Disclaimer: All rates and services for Packages and Options are subject to future changes.)</string>
     <string name="title_activity_maps">Map</string>
+    <string name="no_menus">Oops! no menus found.</string>
 </resources>
